--- a/homework/section01/css/index.css
+++ b/homework/section01/css/index.css
@@ -161,6 +161,17 @@
   width: 48.4%;
 }
 
+.emotion-card {
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s ease-out;
+}
+
+.emotion-card:hover {
+  filter: blur(3px);
+  transform: scale(110%);
+}
+
 .panel-info {
   padding: 0 var(--gap-xxs);
 }
