--- a/homework/section02 /css/index.css
+++ b/homework/section02 /css/index.css
@@ -3,8 +3,10 @@
 
 /* Typography */
 :root {
-  font-family: 'Pretendard Variable', Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic',
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
+  font-family: 'Pretendard Variable', Pretendard, -apple-system,
+    BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI',
+    'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
 }
 
 /* Variables */
@@ -19,6 +21,7 @@
   --gray-600: #777777;
   --gray-700: #5f5f5f;
   --gray-800: #333333;
+  --gray-900: #1c1c1c;
   --gray-b: #000;
   --accent-red: #ea5757;
   --accent-blue: #28b4e1;
@@ -55,7 +58,7 @@
 }
 
 .app-insede {
-  max-width: 1168px;
+  min-width: 1168px;
   padding: var(--gap-sm);
 }
 
@@ -76,24 +79,24 @@
   padding-bottom: var(--gap-xxl);
 }
 
-.content {
-  gap: var(--gap-lg);
+.block-box {
+  width: 100%;
 }
 
 .panel-list {
-  max-width: 784px;
+  min-width: 784px;
   flex-wrap: wrap;
 }
 
 .side-panel {
-  max-width: 360px;
+  min-width: 360px;
 }
 
 .footer {
   width: 100%;
 }
 
-/* Commoms */
+/* Commons */
 
 .flexbox {
   display: flex;
@@ -152,32 +155,70 @@
   font-weight: bold;
 }
 
+.filter-emotion {
+  width: 120px;
+  height: 32px;
+  border-radius: var(--radius-sm);
+  border-color: var(--gray-300);
+  color: var(--gray-900);
+  font-size: 16px;
+  font-weight: var(--weight-medium);
+  padding: 4px;
+  appearance: none;
+  background-image: url('../assets/images/icon_arrow_down.svg');
+  background-repeat: no-repeat;
+  background-position: right 12px center;
+}
+
+.main-content {
+  gap: var(--gap-lg);
+  padding-top: var(--gap-xxl);
+}
+
 .panel-list {
+  flex-grow: 1;
   gap: var(--gap-lg);
   align-items: flex-start;
 }
 
+.panel-list .no-content {
+  width: 100%;
+  text-align: center;
+  align-self: center;
+  font-size: 18px;
+  line-height: 1.5em;
+}
+
 .panel-item {
   width: 48.4%;
+  transition: all 0.5s ease-out;
+  border-radius: var(--radius-md);
+}
+
+.panel-item:hover {
+  transform: scale(110%);
+  box-shadow: 0 2px 30px 0 rgba(0, 0, 0, 0.1);
+}
+
+.panel-item:hover .emotion-card {
+  filter: blur(2px);
 }
 
 .emotion-card {
   width: 100%;
   height: 100%;
-  transition: all 0.5s ease-out;
 }
 
-.emotion-card:hover {
-  filter: blur(3px);
-  transform: scale(110%);
+.emotion-card img {
+  aspect-ratio: 760px / 570px;
 }
 
 .panel-info {
-  padding: 0 var(--gap-xxs);
+  padding: var(--gap-sm) var(--gap-xxs);
 }
 
 .panel-info > div {
-  padding: var(--gap-sm) 0 var(--gap-xxs);
+  padding-bottom: var(--gap-xxs);
   font-size: 14px;
 }
 
@@ -252,7 +293,8 @@
 
 .emotions input[type='radio']:checked {
   border: none;
-  box-shadow: inset 0 0 0 2px var(--gray-b), inset 0 0 0 5px var(--gray-w), inset 0 0 0 10px var(--gray-b);
+  box-shadow: inset 0 0 0 2px var(--gray-b), inset 0 0 0 5px var(--gray-w),
+    inset 0 0 0 10px var(--gray-b);
 }
 
 .input-title-area {
