✅ add: 과제 코드 추가

--- a/homework/section03/css/common.css
+++ b/homework/section03/css/common.css
@@ -5,6 +5,8 @@
 :root {
   font-family: 'Pretendard Variable', Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic',
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
+  color: var(--gray-b);
+  font-size: 10px;
 }
 
 /* Variables */
@@ -12,6 +14,7 @@
 :root {
   --gray-w: #fff;
   --gray-50: #f2f2f2;
+  --gray-100: #e4e4e4;
   --gray-200: #d4d3d3;
   --gray-300: #c7c7c7;
   --gray-400: #ababab;
@@ -19,21 +22,22 @@
   --gray-600: #777777;
   --gray-700: #5f5f5f;
   --gray-800: #333333;
+  --gray-900: #1c1c1c;
   --gray-b: #000;
   --accent-red: #ea5757;
   --accent-blue: #28b4e1;
   --accent-purple: #a229ed;
   --accent-yellow: #d59029;
-  --radius-sm: 8px;
-  --radius-md: 16px;
-  --radius-lg: 24px;
-  --gap-xxs: 8px;
-  --gap-xs: 12px;
-  --gap-sm: 16px;
-  --gap-md: 20px;
-  --gap-lg: 24px;
-  --gap-xl: 32px;
-  --gap-xxl: 40px;
+  --radius-sm: 0.8rem;
+  --radius-md: 1.6rem;
+  --radius-lg: 2.4rem;
+  --gap-xxs: 0.8rem;
+  --gap-xs: 1.2rem;
+  --gap-sm: 1.6rem;
+  --gap-md: 2rem;
+  --gap-lg: 2.4rem;
+  --gap-xl: 3.2rem;
+  --gap-xxl: 4rem;
   --weight-this: 100;
   --weight-extra-light: 200;
   --weight-light: 300;
@@ -48,23 +52,29 @@
 /* Layouts */
 
 .app {
+  width: 100vw;
+  min-height: 100vh;
+}
+
+.app-inside {
+  width: 100%;
+  height: 100%;
+  padding: var(--gap-sm);
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
-.app-insede {
-  max-width: 1168px;
-  padding: var(--gap-sm);
-}
-
 .header {
-  padding: 22px 0;
+  width: 100%;
+  padding: 2.2rem var(--gap-sm);
 }
 
 .container {
+  width: 100%;
+  height: 100%;
   padding: var(--gap-lg) 0 var(--gap-xxl);
+  position: relative;
 }
 
 .container-cover {
@@ -76,24 +86,23 @@
   padding-bottom: var(--gap-xxl);
 }
 
-.content {
-  gap: var(--gap-lg);
+.block-box {
+  width: 100%;
 }
 
 .panel-list {
-  max-width: 784px;
   flex-wrap: wrap;
-}
-
-.side-panel {
-  max-width: 360px;
 }
 
 .footer {
   width: 100%;
 }
 
-/* Commoms */
+/* Commons */
+
+:root {
+  scroll-behavior: smooth;
+}
 
 .flexbox {
   display: flex;
@@ -107,78 +116,29 @@
   justify-content: space-between;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .align-center {
   align-items: center;
 }
 
-/* Components */
+body {
+  position: relative;
+}
+
+.header {
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  background-color: rgba(255, 255, 255, 0.2);
+}
 
 .header-title {
-  font-size: 18px;
+  font-size: 1.8rem;
   font-weight: var(--weight-bold);
-}
-
-.container-cover {
-  height: 240px;
-  border-radius: var(--radius-lg);
-  overflow: hidden;
-  align-items: center;
-}
-
-.container-cover img {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-}
-
-.menu-list {
-  gap: var(--gap-md);
-}
-
-.menu-list li {
-  color: var(--gray-400);
-
-  padding: var(--gap-sm) var(--gap-xs);
-  font-size: 24px;
-  font-weight: var(--weight-medium);
-}
-
-.menu-list li.active {
-  border-bottom: 2px solid var(--gray-b);
-}
-
-.menu-list li.active a {
-  color: var(--gray-b);
-  font-weight: bold;
-}
-
-.panel-list {
-  gap: var(--gap-lg);
-  align-items: flex-start;
-}
-
-.panel-item {
-  width: 48.4%;
-}
-
-.emotion-card {
-  width: 100%;
-  height: 100%;
-  transition: all 0.5s ease-out;
-}
-
-.emotion-card:hover {
-  filter: blur(3px);
-  transform: scale(110%);
-}
-
-.panel-info {
-  padding: 0 var(--gap-xxs);
-}
-
-.panel-info > div {
-  padding: var(--gap-sm) 0 var(--gap-xxs);
-  font-size: 14px;
 }
 
 .badge-emoticon {
@@ -200,30 +160,19 @@
   color: var(--accent-purple);
 }
 
-.date {
-  color: var(--gray-500);
-  font-weight: var(--weight-regular);
+.scroll-up {
+  position: fixed;
+  right: 10px;
+  bottom: 32px;
 }
 
-.panel-title {
-  font-size: 18px;
-  font-weight: var(--weight-bold);
-  max-height: 24px;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
-.side-panel {
-  align-self: self-start;
-  padding: var(--gap-lg);
-  border: 1px solid var(--gray-200);
-  border-radius: var(--radius-md);
-}
-
-.side-title {
-  font-size: 24px;
-  font-weight: var(--weight-bold);
+.button-scroll-up {
+  width: 40px;
+  height: 40px;
+  background-color: var(--gray-w);
+  border: 1px solid var(--gray-50);
+  border-radius: 100%;
+  box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.3);
 }
 
 .form-area {
@@ -231,7 +180,7 @@
 }
 
 .form-title {
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: var(--weight-semi-bold);
 }
 
@@ -255,6 +204,10 @@
   box-shadow: inset 0 0 0 2px var(--gray-b), inset 0 0 0 5px var(--gray-w), inset 0 0 0 10px var(--gray-b);
 }
 
+.emotion-label {
+  font-size: 1.6rem;
+}
+
 .input-title-area {
   padding-bottom: var(--gap-lg);
 }
@@ -262,7 +215,7 @@
 .input-title-area > label,
 .input-content-area > label {
   color: var(--gray-800);
-  font-size: 14px;
+  font-size: 1.4rem;
   font-weight: var(--weight-medium);
 }
 
@@ -271,7 +224,7 @@
   display: block;
   width: 100%;
   color: var(--gray-400);
-  font-size: 16px;
+  font-size: 1.6rem;
   border: 1px solid var(--gray-200);
   border-radius: var(--radius-sm);
   padding: var(--gap-xs) var(--gap-sm);
@@ -286,40 +239,100 @@
   min-height: 128px;
 }
 
-.button-register {
-  width: 100%;
+.review {
+  padding: var(--gap-lg) 0;
+  border-top: 1px solid var(--gray-b);
+}
+
+.review legend {
+  font-size: 18px;
+  font-weight: var(--weight-semi-bold);
+}
+
+.review-area {
+  padding-top: 13px;
+  padding-bottom: var(--gap-sm);
+  gap: var(--gap-sm);
+  justify-content: space-between;
+}
+
+.input-review {
+  padding: var(--gap-xs) var(--gap-sm);
+  flex-grow: 1;
+  max-width: 1100px;
   height: 48px;
+  border-radius: var(--radius-sm);
+  border: 1px solid var(--gray-200);
+  background-color: var(--gray-w);
+  font-size: 16px;
+  font-weight: var(--weight-medium);
+}
+
+.input-review:disabled {
+  color: var(--gray-400);
+  background-color: var(--gray-50);
   border: none;
+}
+
+.button-add-review {
+  width: 50px;
+  height: 48px;
+  color: var(--gray-w);
+  background-color: var(--gray-b);
   border-radius: var(--radius-sm);
   font-size: 18px;
   font-weight: var(--weight-semi-bold);
-  color: var(--gray-50);
-  background-color: var(--gray-b);
 }
 
-.button-register:disabled {
-  color: var(--gray-50);
+.button-add-review:disabled {
+  color: var(--gray-w);
   background-color: var(--gray-300);
+  border: none;
   cursor: not-allowed;
 }
 
-.footer {
+.review-item {
   width: 100%;
+  gap: var(--gap-xs);
+  font-size: 16px;
+  padding-bottom: var(--gap-xs);
+  padding-top: var(--gap-xs);
+  border-bottom: 1px solid var(--gray-100);
+}
+
+.review-item:first-child {
+  padding-top: 0;
+}
+
+.review-item:last-child {
+  border: none;
+}
+
+.review-item-content {
+  font-weight: var(--weight-medium);
+}
+
+.review-date {
+  color: var(--gray-600);
+  font-weight: var(--weight-regular);
+}
+
+.footer {
   background-color: var(--gray-50);
   display: flex;
   justify-content: center;
+  height: 110px;
 }
 
 .footer-inside {
   flex-grow: 1;
-  max-width: 1168px;
   padding: var(--gap-lg) var(--gap-sm);
   gap: var(--gap-xl);
   font-size: 14px;
 }
 
 .footer-title {
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: bold;
 }
 
@@ -333,8 +346,35 @@
   font-weight: var(--weight-light);
 }
 
-@media (max-width: 1000px) {
-  .panel-item {
+@media (max-width: 900px) {
+  .app {
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+  .main-content {
+    flex-direction: column;
+  }
+
+  .main-content > * {
     width: 100%;
+  }
+  .container-cover {
+    max-width: 100%;
+  }
+
+  .filter {
+    order: 2;
+  }
+
+  .panel-list {
+    display: inline-grid;
+    grid-template-columns: 1fr 1fr;
+    order: 3;
+  }
+
+  .side-panel {
+    order: 1;
+    flex-basis: 100%;
+    max-width: 100% !important;
   }
 }
